[ASTERIXDB-3288][RT] COPY TO runtime - Part 2
- user model changes: yes
- storage format changes: no
- interface changes: yes

Details:
- Add runtime directory path validation
- Fail if the writing path exists and
  is not empty
- Changed file counter to have the maxmimum
  number of digits that Java long can hold
  instead of only 4-digits

Change-Id: I3bd18d6c77feaf90600f66a437facdbab925aef1
Reviewed-on: https://asterix-gerrit.ics.uci.edu/c/asterixdb/+/17890
Integration-Tests: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Reviewed-by: Wail Alkowaileet <wael.y.k@gmail.com>
Reviewed-by: Ali Alsuliman <ali.al.solaiman@gmail.com>
Tested-by: Jenkins <jenkins@fulliautomatix.ics.uci.edu>